trunk/Archive2/09/887637df7c4636/output
main.cpp:9:5: error: no matching function for call to 'g'
    g(42);
    ^
main.cpp:5:6: note: candidate template ignored: substitution failure [with T = int]: call to deleted function 'f'
auto g(T v) -> decltype(f(v)){}
     ^                  ~
1 error generated.
